Fix the text wrap of .quote-text

--- a/style.css
+++ b/style.css
@@ -117,7 +117,8 @@ button {
 
 .quote-container {
   background-color: #e5e7eb;
-  padding: 60px 150px;
+  margin: 0;
+  padding: 60px 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -128,13 +129,13 @@ button {
   font-style: italic;
   font-weight: 300px;
   color: #1f2937;
-  text-align: center;
-  /* max-width: 800px; */
+
+  max-width: 800px;
+  margin-bottom: 10px;
 }
 .quote-author {
   font-weight: bold;
   color: #1f2937;
-  margin-top: 20px;
   align-self: flex-end;
 }
 
